--- a/client/src/pages/components/ReportForm.css
+++ b/client/src/pages/components/ReportForm.css
@@ -1,13 +1,17 @@
 .report-info_ {
-  box-shadow: inset;
-  text-align: center;
+  align-items: right;
+  justify-items: center;
   font-weight: bold;
   font-optical-sizing: auto;
   width: inherit;
-  height: flex;
-  background-color: rgb(87, 11, 158);
+  margin: auto;
+  background-color: #c07dc2;
+  color: white;
+  text-emphasis-color: #f8df00;
+  display: grid;
 }
 
-div {
-  justify-self: center;
+::placeholder {
+  color: black;
+  opacity: 5;
 }
